force-app/main/default/objects/AccountContactRelation/fields/Account_Mismatch__c.field-meta.xml
<CustomField>
    <fullName>Account_Mismatch__c</fullName>
    <formula>Account.Account_Id__c &lt;&gt; Contact.Account.Main_Account_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Mismatch</label>
    <type>Checkbox</type>
</CustomField>