force-app/main/default/objects/AccountContactRelation/fields/Is_Current_Employee__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Employee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Current Employee</label>
    <type>Checkbox</type>
</CustomField>