force-app/main/default/objects/AccountContactRelation/fields/Is_Paid_By_CP__c.field-meta.xml
<CustomField>
    <fullName>Is_Paid_By_CP__c</fullName>
    <formula>Account.Paid_By_CP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Paid By CP</label>
    <type>Checkbox</type>
</CustomField>