force-app/main/default/objects/AccountContactRelation/fields/IsPrimaryAndBillingContact__c.field-meta.xml
<CustomField>
    <fullName>IsPrimaryAndBillingContact__c</fullName>
    <formula>AND(INCLUDES(Roles, &quot;Billing Contact&quot;),
  INCLUDES(Roles, &quot;Primary Contact&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsPrimaryAndBillingContact</label>
    <type>Checkbox</type>
</CustomField>