force-app/main/default/objects/AccountContactRelation/fields/Membership_Activation_Link__c.field-meta.xml
<CustomField>
    <fullName>Membership_Activation_Link__c</fullName>
    <description>Stores membership activation link; used to provide access or onboarding link to member</description>
    <formula>&quot;https://members.mainstreet.org/membership/activate?memberId=&quot; &amp;
CASESAFEID(
  IF(
    Account.IsPersonAccount,
    Account.PersonContactId,
    ContactId
  )
)</formula>
    <label>Membership Activation Link</label>
    <type>Text</type>
</CustomField>